# nimbus-db

./: .gitignore  GEMINI.md  PHASE_1.md  PHASE_10.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  PHASE_8.md  PHASE_9.md  PROJECT_STATUS.md  README.md
.github/workflows/: ci.yml
deploy/docker/: docker-compose.yml
deploy/observability/: alert.rules.yml  alertmanager.yml  docker-compose.observability.yml  prometheus.yml
docs/: benchmarks.md
docs/decisions/: ack-quorum-policy.md  alerting-choice.md  consistency-model.md  dashboard-visualization-approach.md  internal-rpc-choice.md  leader-election-approach.md  metadata-store-choice.md  metadata-store.md  rust-vs-cpp.md  service-communication.md  tracing-backend.md  wal-fsync-policy.md
proto/: metadata_service.proto  node_agent.proto
services/control-plane/: Dockerfile  README.md  go.mod  handlers.go  main.go  orchestrator.go  orchestrator_test.go  reconciliation.go
services/dashboard/: README.md  package-lock.json
services/gateway/: README.md  go.mod  main.go
services/metadata-service/: Dockerfile  README.md  go.mod  go.sum  main.go
services/node-agent/: Cargo.toml  README.md  build.rs
services/node-agent/.cargo/: config.toml
services/node-agent/src/: main.rs
services/node-agent/src/storage/: btree_index.rs  compaction.rs  engine.rs  hash_index.rs  mod.rs  page.rs  recovery.rs  replication.rs  snapshot.rs  wal.rs
services/observability/: go.mod
services/scheduler/: Dockerfile  README.md  go.mod  main.go
services/worker-node/: Dockerfile  README.md  go.mod  main.go
(+54 files in other folders)
