[package]
name = "node-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
crc32fast = "1.4"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tempfile = "3.10"
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"

